Стилизация главной страницы

--- a/index.html
+++ b/index.html
@@ -3,186 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./main.css">
   <title>Main page</title>
 </head>
 <body>
-  <div class="wrapper">
-    <header class="header">
-      <a href="#" class="logo">
-        <img src="" alt="Логотип" class="logo__pick">
-      </a>  
-      <nav class="menu">
-        <ul class="menu__list">
-          <li class="menu__item">
-            <a href="#" class="menu__link">Главная</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Услуги</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Отзывы</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <a href="tel:+78007003030" class="contacts__phone">8 800 7003030</a>
-        <div class="contacts__graph">График работы</div>
-      </address>
-    </header>
-    <main class="main-content">
-      <div class="preview">
-        <h1 class="preview__title">Авторские туры по Азии</h1>
-        <p class="preview__descreption">Открой для себя Азию</p>
-        <div class="preview__button"></div>
-        <button class="button">Подробнее</button>
-      </div>
-      <div class="tours">
-        <h2 class="tours__title">
-          <span class="tours__title-text">Горящие туры</span>
-          <img src="#" alt="Картинка заголовка тура" class="tour__title-pic"> 
-        </h2>
-        <ul class="tours__list">
-          <li class="tours__item">
-            <div class="tours__img-wrapper">
-              <img src="" alt="" class="tours__img">
-            </div>
-            <div class="tours__content">
-              <div class="toours__title-two">Таланд</div>
-              <div class="tours__description">
-                <div class="tours__description-block">
-                  <img src="#" alt="иконка" class="tour__description-block-pick">
-                  <span class="tour__deccription-block-text">дни пребывания</span>
-                </div>
-                <div class="tours__description-block">
-                  <img src="#" alt="иконка" class="tour__description-block-pick">
-                  <span class="tour__deccription-block-text">завтраки</span>
-                </div>
-                <div class="tour__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, nostrum.
-                </div>
-                <div class="tour__button">
-                  <button class="button">Подробнее</button>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li class="tours__item">
-            <div class="tours__img-wrapper">
-              <img src="" alt="" class="tours__img">
-            </div>
-            <div class="tours__content">
-              <div class="toours__title-two">Бали</div>
-              <div class="tours__description">
-                <div class="tours__description-block">
-                  <img src="#" alt="иконка" class="tour__description-block-pick">
-                  <span class="tour__deccription-block-text">дни пребывания2</span>
-                </div>
-                <div class="tours__description-block">
-                  <img src="#" alt="иконка" class="tour__description-block-pick">
-                  <span class="tour__deccription-block-text">завтраки2</span>
-                </div>
-                <div class="tour__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, nostrum.
-                </div>
-                <div class="tour__button">
-                  <button class="button">Подробнее</button>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li class="tours__item">
-            <div class="tours__img-wrapper">
-              <img src="" alt="" class="tours__img">
-            </div>
-            <div class="tours__content">
-              <div class="toours__title-two">Индонезия</div>
-              <div class="tours__description">
-                <div class="tours__description-block">
-                  <img src="#" alt="иконка" class="tour__description-block-pick">
-                  <span class="tour__deccription-block-text">дни пребывания3</span>
-                </div>
-                <div class="tours__description-block">
-                  <img src="#" alt="иконка" class="tour__description-block-pick">
-                  <span class="tour__deccription-block-text">завтраки3</span>
-                </div>
-                <div class="tour__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, nostrum.
-                </div>
-                <div class="tour__button">
-                  <button class="button">Подробнее</button>
-                </div>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </div>
-      <div class="news">
-        <h2 class="news__title">
-          <span class="news__title-text">Новости и акции</span>
-        </h2>
-        <ul class="news__list">
-          <li class="news__item">
-            <div class="news__content">
-              <time class="news__date">
-                <span class="news__date-mouth">деабрь</span>
-                <span class="news__date-year">2019</span>
-              </time>
-              <div class="news__title-two">Дешевые путевки на Новый год</div>
-              <p class="news__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, minus?
-              </p>
-            </div>
-          </li>
-          <li class="news__item">
-            <div class="news__content">
-              <time class="news__date">
-                <span class="news__date-mouth">деабрь</span>
-                <span class="news__date-year">2019</span>
-              </time>
-              <div class="news__title-two">Акции для серфингистов</div>
-              <p class="news__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, minus?
-              </p>
-            </div>
-          </li>
-        </ul>
-        <div class="paginator">
-          <div class="paginator__display">
-            Страница <span class="paginator__displey-current">1</span> из <span class="paginator__display-all">7</span>
-          </div>
-          <ul class="paginator__list">
-            <li class="paginator__item">
-              <a href="#" class="paginator__link">1</a>
-            </li>
-            <li class="paginator__item">
-              <a href="#" class="paginator__link">2</a>
-            </li>
-            <li class="paginator__item">
-              <a href="#" class="paginator__link">3</a>
-            </li>
-            <li class="paginator__item">
-              <a href="#" class="paginator__link">4</a>
-            </li>
-            <li class="paginator__item">
-              <a href="#" class="paginator__link">5</a>
-            </li>
-            <li class="paginator__item">
-              <a href="#" class="paginator__link">6</a>
-            </li>
-            <li class="paginator__item">
-              <a href="#" class="paginator__link">7</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="about">
-        <img src="#" alt="Картинка о нас" class="about__img">
-        <div class="about__content">
-          <h2 class="about__title">О нас</h2>
-          <p class="about__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, quaerat?</p>
-          <div class="about__button">
-            <button class="button">Подробнее</button>
-          </div>
-        </div>
-      </div>
-      <footer class="footer">
+  <div class="wrapper main-page-wrapper">
+    <div class="conteiner">
+      <header class="header">
         <a href="#" class="logo">
-          <img src="" alt="Логотип" class="logo__pick">
+          <img src="./img/лого.png" alt="Логотип" class="logo__img">
         </a>  
         <nav class="menu">
           <ul class="menu__list">
@@ -197,36 +26,197 @@
             </li>
           </ul>
         </nav>
-        <div class="socials">
-          <ul class="social__list">
-            <li class="social__item">
-              <a href="#" class="social__link">
-                <img src="#" alt="Картинка социалки" class="social__pic">
-              </a>
+        <address class="contacts">
+          <a href="tel:+78007003030" class="contacts__phone">8 800 7003030</a>
+          <div class="contacts__graph">График работы</div>
+        </address>
+      </header>
+      <main class="main-content">
+        <div class="preview">
+          <h1 class="preview__title">Авторские туры по Азии</h1>
+          <h4 class="preview__descreption">Открой для себя Азию</h4>
+          <div class="preview__button"></div>
+          <button class="button">Подробнее</button>
+        </div>
+        <div class="tours">
+          <h2 class="tours__title">
+            <span class="tours__title-text">Горящие туры</span>
+            <img src="./img/flame.png" alt="Картинка заголовка тура" class="tour__title-pic"> 
+          </h2>
+          <ul class="tours__list">
+            <li class="tours__item">
+              <div class="tours__img-wrapper">
+                <img src="./img/river.png" alt="" class="tours__img">
+              </div>
+              <div class="tours__content">
+                <h3 class="tours__title-two">Таиланд</h3>
+                <div class="tours__description">
+                  <div class="tours__description-block">
+                    <img src="./img/calendar.png" alt="иконка" class="tours__description-block-pick">
+                    <div class="tours__deccription-block-text">7-12 ночей</div>
+                  </div>
+                  <div class="tours__description-block">
+                    <img src="./img/meal.png" alt="иконка" class="tours__description-block-pick">
+                    <div class="tours__deccription-block-text">завтраки</div>
+                  </div>
+                  <div class="tours__text">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.
+                  </div>
+                  <div class="tours__button">
+                    <button class="button button--color--white">смотреть</button>
+                  </div>
+                </div>
+              </div>
             </li>
-            <li class="social__item">
-              <a href="#" class="social__link">
-                <img src="#" alt="Картинка социалки" class="social__pic">
-              </a>
+            <li class="tours__item">
+              <div class="tours__img-wrapper">
+                <img src="./img/pool.png" alt="" class="tours__img">
+              </div>
+              <div class="tours__content">
+                <h3 class="tours__title-two">Бали</h3>
+                <div class="tours__description">
+                  <div class="tours__description-block">
+                    <img src="./img/calendar.png" alt="иконка" class="tours__description-block-pick">
+                    <div class="tours__deccription-block-text">7-12 ночей</div>
+                  </div>
+                  <div class="tours__description-block">
+                    <img src="./img/meal.png" alt="иконка" class="tours__description-block-pick">
+                    <div class="tours__deccription-block-text">завтраки</div>
+                  </div>
+                  <div class="tours__text">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.
+                  </div>
+                  <div class="tours__button">
+                    <button class="button button--color--white">смотреть</button>
+                  </div>
+                </div>
+              </div>
             </li>
-            <li class="social__item">
-              <a href="#" class="social__link">
-                <img src="#" alt="Картинка социалки" class="social__pic">
-              </a>
-            </li>
-            <li class="social__item">
-              <a href="#" class="social__link">
-                <img src="#" alt="Картинка социалки" class="social__pic">
-              </a>
+            <li class="tours__item">
+              <div class="tours__img-wrapper">
+                <img src="./img/ocean.png" alt="" class="tours__img">
+              </div>
+              <div class="tours__content">
+                <h3 class="tours__title-two">Индонезия</h3>
+                <div class="tours__description">
+                  <div class="tours__description-block">
+                    <img src="./img/calendar.png" alt="иконка" class="tours__description-block-pick">
+                    <div class="tours__deccription-block-text">7-12 ночей</div>
+                  </div>
+                  <div class="tours__description-block">
+                    <img src="./img/meal.png" alt="иконка" class="tours__description-block-pick">
+                    <div class="tours__deccription-block-text">завтраки</div>
+                  </div>
+                  <div class="tours__text">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.
+                  </div>
+                  <div class="tours__button">
+                    <button class="button button--color--white">смотреть</button>
+                  </div>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
-        <address class="contacts">
-          <span class="contacts__text">Бесплатные звонки по России</span>
-          <a href="tel:+78007003030" class="contacts__phone">8 800 7003030</a>
-        </address>
-      </footer>
-    </main>
+        <div class="news">
+          <h2 class="news__title">
+            <span class="news__title-text">Новости и акции</span>
+          </h2>
+          <ul class="news__list">
+            <li class="news__item">
+              <img src="./img/plain.png" alt="Путевки" class="news__img">
+              <div class="news__content">
+                <time class="news__date">Декабрь 2019</time>
+                <div class="news__title-two">Дешевые путевки на Новый год</div>
+                <div class="news__text">Проведи новый год в Тайланде</div>
+              </div>
+            </li>
+            <li class="news__item">
+              <img src="./img/Surfer.png" alt="Серфинг" class="news__img">
+              <div class="news__content">
+                <time class="news__date">Декабрь 2019</time>
+                <div class="news__title-two">Акции для серфингистов</div>
+                <div class="news__text">В сезон больших волн скидка на путевку в Тайланд на остров серфенгистов. Удачного пути!</div>
+              </div>
+            </li>
+          </ul>
+          <div class="paginator">
+            <div class="paginator__display">Страница 1 из 7</div>
+            <ul class="paginator__list">
+              <li class="paginator__item paginator__item--active">
+                <a href="#" class="paginator__link">1</a>
+              </li>
+              <li class="paginator__item">
+                <a href="#" class="paginator__link">2</a>
+              </li>
+              <li class="paginator__item">
+                <a href="#" class="paginator__link">3</a>
+              </li>
+              <li class="paginator__item">
+                <a href="#" class="paginator__link">4</a>
+              </li>
+              <li class="paginator__item">
+                <a href="#" class="paginator__link">5</a>
+              </li>
+              <li class="paginator__item">
+                <a href="#" class="paginator__link">6</a>
+              </li>
+              <li class="paginator__item">
+                <a href="#" class="paginator__link">7</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="about">
+          <div class="about__content">
+            <h2 class="about__title">О нас</h2>
+            <div class="about__text">
+              <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях.</p>
+            </div>
+            <div class="about__button">
+              <button class="button">Подробнее</button>
+            </div>
+          </div>
+        </div>
+        <footer class="footer-container">
+          <div class="container footer-container__content">
+            <div class="footer">
+              <a href="#" class="logo">
+                <img src="./img/лого.png" alt="Логотип" class="logo__pick">
+              </a>  
+              <nav class="menu">
+                <ul class="menu__list">
+                  <li class="menu__item">
+                    <a href="#" class="menu__link">Главная</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#" class="menu__link">Услуги</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#" class="menu__link">Отзывы</a>
+                  </li>
+                </ul>
+              </nav>
+              <ul class="social">
+                <li class="social__item social__item--icon--telegram">
+                  <a href="#" class="social__link"></a>
+                </li>
+                <li class="social__item social__item--icon--vk">
+                  <a href="#" class="social__link"></a>
+                </li>
+                <li class="social__item social__item--icon--fb">
+                  <a href="#" class="social__link"></a>
+                </li>
+                <li class="social__item social__item--icon--insta">
+                  <a href="#" class="social__link"></a>
+                </li>
+              </ul>
+              <address class="contacts">
+                <div class="contacts__text">Бесплатные звонки по России</div>
+                <a href="tel:+78007003030" class="contacts__phone">8 800 7003030</a>
+              </address>
+            </div>
+          </div>
+        </footer>
+      </main>
+    </div>
   </div>
 </body>
 </html>
