--- a/services.html
+++ b/services.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=1200, initial-scale=1.0">
-  <link rel="stylesheet" href="./main.css">
+  <link rel="stylesheet" href="./styles.css">
   <title>Serveses page</title>
 </head>
 <body>
   <div class="wrapper">
    <section class="top-line">
      <div class="conteiner top-line__conteiner">
-      <header class="header">
+      <header class="header header_services">
         <div class="header__col">
           <a href="#" class="logo">
             <img src="./img/лого.png" alt="Логотип" class="logo__img">
@@ -123,42 +123,42 @@
        <ul class="partners">
          <li class="partners__item">
            <a href="#" class="partners__link">
-             <img scr="/img/icons/partners/pobeda.png" alt="pobeda logo">
+             <img src="./img/icons/partners/pobeda.png" alt="pobeda logo">
            </a>
          </li>
          <li class="partners__item">
           <a href="#" class="partners__link">
-            <img scr="/img/icons/partners/pobeda.png" alt="s7 logo">
+            <img src="./img/icons/partners/s7.png" alt="s7 logo">
           </a>
         </li>
         <li class="partners__item">
           <a href="#" class="partners__link">
-            <img scr="/img/icons/partners/lets-fly.png" alt="lets-fly logo">
+            <img src="./img/icons/partners/lets-fly.png" alt="lets-fly logo">
           </a>
         </li>
         <li class="partners__item">
           <a href="#" class="partners__link">
-            <img scr="/img/icons/partners/pobeda.png" alt="lufthansa logo">
+            <img src="./img/icons/partners/lufthansa.png" alt="lufthansa logo">
           </a>
         </li>
         <li class="partners__item">
           <a href="#" class="partners__link">
-            <img scr="/img/icons/partners/airbaltic.png" alt="airbaltic logo">
+            <img src="./img/icons/partners/airbaltic.png" alt="airbaltic logo">
           </a>
         </li>
         <li class="partners__item">
           <a href="#" class="partners__link">
-            <img scr="/img/icons/partners/pegasus.png" alt="pegasus logo">
+            <img src="./img/icons/partners/pegasus.png" alt="pegasus logo">
           </a>
         </li>
         <li class="partners__item">
           <a href="#" class="partners__link">
-            <img scr="/img/icons/partners/ural.png" alt="ural logo">
+            <img src="./img/icons/partners/ural.png" alt="ural logo">
           </a>
         </li>
         <li class="partners__item">
           <a href="#" class="partners__link">
-            <img scr="/img/icons/partners/pegas.png" alt="pegas logo">
+            <img src="./img/icons/partners/pegas.png" alt="pegas logo">
           </a>
         </li>
        </ul>
